# project_edge

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
docs/: MANIFESTO.md
src/blocktracex_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/btx/: config.py  dashboard.py  doctor.py  info.py  init.py  main.py  recommend.py  report.py  scaffold.py  scoring.py  templates.py  validate.py
tests/: test_scaffold.py
