[project]
name = "blocktracex-cli"
version = "0.1.0"
description = "Developer CLI for Blocktracex projects"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich"
]

[project.scripts]
btx = "btx.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]